--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Hola</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Samiul Basar Sojol</title>
+    <meta name="description" content="Business Designer & Consultant">
+    <meta name="author" content="Samiul Basar Sojol">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -75,9 +75,9 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I am Jonathan Doe. <br>
-                    I am a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                    I am Samiul Basar Sojol. <br>
+                    I am a Business & UI/UX <br>
+                    designer based in Bangladesh.
                 </h1>
 
                 <div class="home-content__buttons">
