--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I am Samiul Basar Sojol. <br>
-                    I am a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                    I'm Samiul Basar Sojol. <br>
                 </h1>
-
+                <h3
+                a graphic & UI/UX <br>
+                    designer based in Somewhere.
+                </h3>
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
                         Latest Projects
