--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Samiul Basar Sojol</title>
-    <meta name="description" content="Business & UI UX Designer">
+    <meta name="description" content="Personal Notebook">
     <meta name="author" content="Samiul Basar Sojol">
 
     <!-- mobile specific metas
@@ -76,11 +76,10 @@
 
                 <h1>
                     I'm Samiul Basar Sojol. <br>
-                </h1>
-                <h3>
                 a graphic & UI/UX <br>
                     designer based in Somewhere.
-                </h3>
+                 </h1>
+                
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
                         Latest Projects
