--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
                 <h1>
                     I'm Samiul Basar Sojol. <br>
-                a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                Welcome to my <br>
+                   Personal Notebook
                  </h1>
                 
                 <div class="home-content__buttons">
