--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I'm Samiul Basar Sojol. <br>
-                Welcome to my <br>
+                    I'm Samiul Basar Sojol.</h1> <br>
+                    <h2> 
+                        Here is my
+                    </h2> <br>
+                    <h1>
                    Personal Notebook
                  </h1>
                 
