--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
 
                 <h1>
                     I'm Samiul Basar Sojol.</h1> <br>
-                    <h2> 
-                        Here is my
-                    </h2> <br>
-                    <h1>
-                   Personal Notebook
+                        Meet here
+                     <br>
+                   My Personal Notebook
                  </h1>
                 
                 <div class="home-content__buttons">
@@ -104,16 +102,16 @@
 
         <ul class="home-social">
             <li>
-                <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://facebook.com/samiulbasar.sojol"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="https://twitter.com/SamsSojol"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/samssojol/"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+                <a href="https://www.behance.net/samssahans5ec2"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
                 <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
