--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     I'm Samiul Basar Sojol.</h1> <br>
                         Meet here
                      <br>
-                   My Personal Notebook
+                      My Personal Notebook
                  </h1>
                 
                 <div class="home-content__buttons">
@@ -130,7 +130,8 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">I'm a CEO & Founder of <a href="http://www.electeco.org">Electeco Global Corporation</a> is a community platform to 
+                    connect business & peoples to enhance positive impact on every action.</p>
             </div>
         </div>
 
