--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
         
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
-                <h3>About</h3>
-                <h1>More About Me</h1>
-                <p class="lead">I'm a CEO & Founder of <a href="http://www.electeco.org">Electeco Global Corporation</a> is a community platform to 
-                    connect business & peoples to enhance positive impact on every action.</p>
+                <h3>More About</h3>
+                <h1>Samiul Basar Sojol</h1>
+                <p class="lead">Enterprenuere  |  Consultant  |  Computer Engineer</p>
             </div>
         </div>
 
