--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
                 <h1>
                     I'm Samiul Basar Sojol.</h1> <br>
-                        Meet here
+                      <strong>  Meet here
                      <br>
-                      My Personal Notebook
+                          My Personal Notebook</strong>
                  </h1>
                 
                 <div class="home-content__buttons">
