--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
                 <h1>
                     I'm Samiul Basar Sojol.</h1> <br>
-                      <strong>  Meet here
+                      <h2>  Meet here
                      <br>
                           My Personal Notebook</strong>
-                 </h1>
+                 </h2>
                 
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
