--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I'm <br>
-                    Samiul Basar Sojol</h1> <br>
-                      <h2>  Meet here
+                    I'm Samiul Basar Sojol</h1> 
+                <br>
+                      <h2 style="color:LightGray;>  Meet here
                      <br>
                           My Personal Notebook</strong>
                  </h2>
