--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
                 <h1>
                     I'm Samiul Basar Sojol</h1> 
                 <br>
-                      <h2 style="color:LightGray;>  Meet here
+                      <h2 style="color:LightGray;">
+                                 Meet here
                      <br>
-                          My Personal Notebook</strong>
+                          My Personal Notebook
                  </h2>
                 
                 <div class="home-content__buttons">
