--- a/index.html
+++ b/index.html
@@ -862,8 +862,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Hola 2017</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>	
+                    <span>© Copyright Samiul Basar Sojol 2019</span> 
+                    	
                 </div>
 
                 <div class="go-top">
