--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             <div class="col-full text-center">
                 <h3>More About</h3>
                 <h1>Samiul Basar Sojol</h1>
-                <p class="lead">Enterprenuere  |  Consultant  |  Computer Engineer</p>
+                <p class="lead">Founder & CEO of Electeco, 
+                    a business community platform that conect business, services and innitiatives to enhance leaders to increase their opportunity and benifits</p>
             </div>
         </div>
 
