--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                 <h3>More About</h3>
                 <h1>Samiul Basar Sojol</h1>
                 <p class="lead">Founder & CEO of Electeco, 
-                    a business community platform that conect business, services and innitiatives to enhance leaders to increase their opportunity and benifits</p>
+                    a business community platform that connect business, initiatives & leaders to enhance  
+                    their opportunities and benifits</p>
             </div>
         </div>
 
@@ -142,10 +143,15 @@
             <div class="col-six tab-full left">
                 <h3>Howdy!</h3>
 
-                <p>Lorem ipsum Ut eiusmod ex magna sit dolor esse adipisicing minim ad cupidatat eu veniam nostrud mollit laboris sunt magna velit culpa consectetur nostrud consectetur labore sed do.</p>
+                <p>Samiul Basar Sojol is the founder & CEO of Electeco. This is the largest online education platform in 
+                    Bangladesh which teaches more than 250,000 students every single day, that too completely free of cost.</p>
 
                 <p>
-                Lorem ipsum Nisi officia Duis irure voluptate dolor commodo pariatur occaecat aliquip adipisicing voluptate Ut in qui ea sint occaecat in commodo in in in incididunt ut sunt in Ut Duis in ut ex qui anim cupidatat cupidatat ex in non dolore labore ea amet cillum ea qui dolor nisi sed velit mollit exercitation ex fugiat labore in deserunt culpa laborum culpa anim dolore laboris amet irure mollit proident velit fugiat aute ea elit magna consequat qui officia quis elit Duis dolor esse cupidatat tempor proident voluptate aliqua ex cupidatat do eiusmod veniam irure laborum ut magna nostrud dolore ullamco commodo elit sit magna aliqua laborum veniam officia dolor.	
+                10 Minute School has won many global accolades and a few to be mentioned would be The GLOMO Award in World Mobile 
+                    Congress & The APICTA Award which is also known as the Oscars of ICT.
+                Ayman received The Queen’s Leader Award 2018 for creating access to quality education for millions of students in 
+                    Bangladesh. He is also a One Young World ambassador & he recently got enlisted in the prestigious Forbe’s 30 Under 30 list.
+                
                 </p>
             </div>
 
