--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                     Congress & The APICTA Award which is also known as the Oscars of ICT.
                 Ayman received The Queen’s Leader Award 2018 for creating access to quality education for millions of students in 
                     Bangladesh. He is also a One Young World ambassador & he recently got enlisted in the prestigious Forbe’s 30 Under 30 list.
-                
+                yman received The Queen’s Leader Award 2018 for creating access to quality education for millions of students in 
+                    Bangladesh. He is also a One Young World ambassador & he recently got enlisted in the prestigious Forbe’s 30 Under 30 list.
                 </p>
             </div>
 
@@ -160,28 +161,28 @@
 
                 <ul class="skill-bars">
                     <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>HTML5</strong>
+                    <div class="progress percent90"><span>85%</span></div>
+                    <strong>Creativity</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>CSS3</strong>
+                    <strong>Design</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>JQuery</strong>
+                    <div class="progress percent70"><span>80%</span></div>
+                    <strong>Documentation</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>PHP</strong>
+                    <div class="progress percent95"><span>75%</span></div>
+                    <strong>UI & UX</strong>
                     </li>
                     <li>
-                    <div class="progress percent75"><span>75%</span></div>
-                    <strong>Wordpress</strong>
+                    <div class="progress percent75"><span>85%</span></div>
+                    <strong>Business Managment</strong>
                     </li>   
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
-                    <strong>Angular JS</strong>
+                    <strong>ACommunication</strong>
                     </li>   
                 </ul>
             </div>
