--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <a href="https://www.behance.net/samssahans5ec2"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+                <a href="#"><i class="im im-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -182,7 +182,7 @@
                     </li>   
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
-                    <strong>ACommunication</strong>
+                    <strong>Communication</strong>
                     </li>   
                 </ul>
             </div>
