--- a/index.html
+++ b/index.html
@@ -801,27 +801,27 @@
             
                 <!-- contact-success -->
                 <div class="message-success">
-                    Your message was sent, thank you!<br>
+                    Your message was sent Successfull, thank you !<br>
                 </div>
                         
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Phone: (+63) 555 1212<br>
-                Mobile: (+63) 555 0100<br>
-                Fax: (+63) 555 0101
+                <p>Phone: (+880) 1911 951 445 <br>
+                Phone (Work): (+880) 1711 058 513<br>
+                IP: (+63) 555 0101
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p>someone@holawebsite.com<br>
-                info@holawebsite.com
+                <p>sams_sojol@live.com<br>
+                ceo@electeco.org
                 </p>
 
                 <h4 class="h06">Address</h4>
                 <p>
-                1600 Amphitheatre Parkway<br>
-                Mountain View, CA<br>
-                94043 US
+                Ka-109/B, Kalachandpur<br>
+                Gulshan, Dhaka<br>
+                1212 BD
                 </p>
             </div>
 
