--- a/index.html
+++ b/index.html
@@ -807,9 +807,9 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Phone: (+880) 1911 951 445 <br>
-                Phone (Work): (+880) 1711 058 513<br>
-                IP: (+63) 555 0101
+                <p>Personal: (+880) 1911 951 445 <br>
+                Work: (+880) 1711 058 513<br>
+                IP: (+880) 9638 283 822
                 </p>
 
                 <h4 class="h06">Email</h4>
