--- a/index.html
+++ b/index.html
@@ -692,15 +692,15 @@
 
             <div class="col-full cta__content">
 
-                <h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
+                <h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Get Connect For My Updates</a></h2>
 
                 <p class="lead">
-                Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">DreamHost</a>.
-                Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
+                I write my thaughts, Feelings, Guidlines, Advices and Fans in my Blog. 
+                Get <span>My Notes</span> in some simple steps to <span>Sign Up</span>.
                 </p>
 
                 <div class="cta__action">
-                    <a class="btn btn--primary btn--large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
+                    <a class="btn btn--primary btn--large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Connect Now</a>
                 </div>	
 
             </div>
@@ -717,30 +717,30 @@
 
             <div class="col-block stats__col ">
                 <div class="stats__count">
-                    128
+                    04
                 </div>
-                <h4>Awards Received</h4>
+                <h4>Startup</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    1500
+                    1500+
                 </div>
-                <h4>Cups of Coffee</h4>
+                <h4>Professional Connection</h4>
             </div>
             <div class="col-block stats__col stats__col--highlight">
                 <div class="stats__upsign">
                     <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
                 <div class="stats__count">
-                    110
+                    005
                 </div>
-                <h4>Projects Completed</h4>
+                <h4>Corporate Company</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    101
+                    035
                 </div>
-                <h4>Happy Clients</h4> 
+                <h4>Connected Organizetion</h4> 
             </div>
 
         </div>
@@ -756,9 +756,10 @@
         <div class="row narrow section-intro">
             <div class="col-full">
                 <h3>Contact</h3>
-                <h1>Say Hello.</h1>
+                <h1>Send Message</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">Thank you for giving me your attention. You can easily send me your feelings, suggestions, opinions and
+                    feedback here.</p>
             </div>
         </div>
 
@@ -807,9 +808,10 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Personal: (+880) 1911 951 445 <br>
-                Work: (+880) 1711 058 513<br>
-                IP: (+880) 9638 283 822
+                <p>
+                    Personal: (+880) 1911 951 445 <br>
+                    Work    : (+880) 1711 058 513<br>
+                    IP      : (+880) 9638 283 822
                 </p>
 
                 <h4 class="h06">Email</h4>
@@ -821,7 +823,7 @@
                 <p>
                 Ka-109/B, Kalachandpur<br>
                 Gulshan, Dhaka<br>
-                1212 BD
+                1212 Bangladesh
                 </p>
             </div>
 
@@ -841,24 +843,24 @@
                 </div>
 
                 <ul class="footer-social">
-                    <li><a href="#0">
+                    <li><a href="https://web.facebook.com/samiulbasar.sojol">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://twitter.com/SamsSojol">
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://www.instagram.com/samssojol/">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://www.behance.net/samssahans5ec2">
                         <i class="im im-behance" aria-hidden="true"></i>
                         <span>Behance</span>
                     </a></li>
-                    <li><a href="#0">
-                        <i class="im im-pinterest" aria-hidden="true"></i>
+                    <li><a href="https://www.linkedin.com/in/ssojol">
+                        <i class="im im-linkedin" aria-hidden="true"></i>
                         <span>Pinterest</span>
                     </a></li>
                 </ul>
@@ -870,7 +872,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Samiul Basar Sojol 2019</span> 
+                    <span>Copyright © 2019 Samiul Basar Sojol</span> 
                     	
                 </div>
 
