--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Samiul Basar Sojol</title>
     <meta name="description" content="Personal Notebook">
     <meta name="author" content="Samiul Basar Sojol">
+    
+    <meta name="google-site-verification" content="S3faSl2XxLd6IKiP3g0oEqZyMK3Oig2HkdvIQhtOdFw" />
 
     <!-- mobile specific metas
     ================================================== -->
