--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="https://www.behance.net/samssahans5ec2"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
+                <a href="https://linkedin.com/ssojol/"><i class="im im-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -878,7 +878,7 @@
                     </a></li>
                     <li><a href="https://www.linkedin.com/in/ssojol">
                         <i class="im im-linkedin" aria-hidden="true"></i>
-                        <span>Pinterest</span>
+                        <span>LinkedIn</span>
                     </a></li>
                 </ul>
                     
