--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Samiul Basar Sojol</title>
+    <title>Samiul Basar Sojol - Beta 1.0</title>
     <meta name="description" content="Personal Notebook">
     <meta name="author" content="Samiul Basar Sojol">
     
