--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                     I'm Samiul Basar Sojol</h1> 
                 <br>
                       <h4 style="color:LightGray; font-family: cambria;">
-                                 Meet Here
-                     <br>
-                          My Personal Notebook
+                                 Meet my personal NOTEBOOK
                  </h4>
                 
                 <div class="home-content__buttons">
@@ -134,9 +132,9 @@
             <div class="col-full text-center">
                 <h3>More About</h3>
                 <h1>Samiul Basar Sojol</h1>
-                <p class="lead">Founder & CEO of Electeco, 
-                    a Business Community Platform that Connect Business, Initiatives & Leaders to enhance  
-                    their opportunities and benifits</p>
+                <p class="lead">Founder & CEO of &space<a href="electeco.org"> <strong>Electeco</strong></a>
+							<br> 
+                    a Business Community Platform </p>
             </div>
         </div>
 
@@ -150,12 +148,10 @@
                     their opportunities and benifits.</p>
 
                 <p>
-                Electeco has won many global accolades and a few to be mentioned would be The GLOMO Award in World Mobile 
-                    Congress & The APICTA Award which is also known as the Oscars of ICT.
-                Ayman received The Queen’s Leader Award 2018 for creating access to quality education for millions of students in 
-                    Bangladesh. He is also a One Young World ambassador & he recently got enlisted in the prestigious Forbe’s 30 Under 30 list.
-                yman received The Queen’s Leader Award 2018 for creating access to quality education for millions of students in 
-                    Bangladesh. He is also a One Young World ambassador & he recently got enlisted in the prestigious Forbe’s 30 Under 30 list.
+                He is also a dynamic and motivated professional with a proven record of generating and building relationships, managing business from 
+				concept to completion, designing educational strategies, and coaching individuals to success. Skilled in building cross-functional 
+				teams, demonstrating exceptional communication skills, and making critical decisions during challenges. Adaptable and transformational leader 
+				with ability to work independently, creating effective presentations, and developing opportunity.
                 </p>
             </div>
 
@@ -212,9 +208,10 @@
             <div class="col-full text-center">
                 <h2><br>
                     My Work Experience.</h2>
-                <p class="lead">Founder & CEO of Electeco, 
-                    a Business Community Platform that Connect Business, Initiatives & Leaders to enhance  
-                    their opportunities and benifits</p>
+                <p class="lead">
+				He is having 05+ years of professional experiances and he was working 
+				for many well reputade organizetions. Here you can learn more about his experience
+				</p>
             </div>
 
             <div class="col-six tab-full left">
@@ -228,7 +225,11 @@
                             <h5>Secretery of Managing Director</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            <p>PHT Power Tech BD Co. Ltd. - 深圳市鹏海通科技有限公司 is 100% Chinese owned manufacturer company 
+							is sister concern and representing industrial concerns of Shenzhen Power Tech 
+							Company of China. We start our operation and corporate certification in Bangladesh at 2012 
+							to manufacturing electrical products of Mobile Accessories and Lighting products. 
+							</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -237,10 +238,14 @@
                         <div class="timeline__header">
                             <p class="timeline__timeframe">February 2017 - Continue</p>
                             <h3>Leon Manufacturing (BD) Co. Ltd.</h3>
-                            <h5>Chief Operation Officer</h5>
+                            <h5>Finance & Commercial Manager</h5>
                         </div>
                         <div class="timeline__desc">	
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                            <p>LEON Manufacturing (BD) Co. Ltd. - 深圳市鹏海通科技有限公司 
+							is 100% Chinese owned manufacturer company 
+							is sister concern and representing industrial concerns of PHT Group of Industries  
+							of China. We start our operation and corporate certification in Bangladesh at 2017 
+							to manufacturing electrical products of Mobile Accessories and Lighting products. </p>
                         </div>
                         
                     </div> <!-- end timeline__block -->
@@ -258,7 +263,9 @@
                             <h5>Asst. Project Incharge</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            <p>Hammer Activation Ltd. is a market research and brand business development 
+							agency who are operating and working for prommotional activity and market analysis & research.
+							Also working to brand development projects and survay company of Bangladesh. </p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -270,7 +277,9 @@
                             <h5>Web Designer</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                            <p>CODESUM is a software firm working to develop software, ERP, Graphics design, UI/UX development, Web design and 
+							development company. This company is also working for frelancer projects, business content programming and IT Development.
+							</p>
                         </div>
                     </div> <!-- end timeline__block -->
                 </div> <!-- end timeline -->                
@@ -580,8 +589,8 @@
                     <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
                     Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
                     <div class="testimonials__author h06">
-                        Tim Cook
-                        <span>CEO, Apple</span>
+                        JIHAI GONG
+                        <span>Chairman, PHT Group</span>
                     </div>
                 </div>
 
