--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@
 
                 <div class="testimonials__slide">
                     <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
+                    <p>
+					lpsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
                     Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
                     <div class="testimonials__author h06">
                         JIHAI GONG
