--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="col-full text-center">
                 <h3>More About</h3>
                 <h1>Samiul Basar Sojol</h1>
-                <p class="lead">Founder & CEO of &space<a href="electeco.org"> <strong>Electeco</strong></a>
+                <p class="lead">Founder & CEO of <a href="electeco.org"> <strong>Electeco</strong></a>
 							<br> 
                     a Business Community Platform </p>
             </div>
