--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     I'm Samiul Basar Sojol</h1> 
                 <br>
                       <h4 style="color:LightGray; font-family: cambria;">
-                                 Meet my personal NOTEBOOK
+                                 Personal Notebook | Beta 1.0
                  </h4>
                 
                 <div class="home-content__buttons">
