--- a/index.html
+++ b/index.html
@@ -293,15 +293,8 @@
         </div> <!-- end about-content timeline -->
 		
 		
+<!-------------------------------------------------------------------------------- Additional Input--------------------->		
 		
-		
-		
-		
-		
-		
- 
- 
- 
  <br>
         
 
@@ -309,10 +302,10 @@
 
             <div class="col-full text-center">
                 <h2><br>
-                    My Work Experience.</h2>
+                    Extra Curriculler Activities.</h2>
                 <p class="lead">
-				He is having 05+ years of professional experiances and he was working 
-				for many well reputade organizetions. Here you can learn more about his experience
+				He was actively engaged with verious academic, social charity and philanthropy based community 
+				platform as his extra curricullar activities from his student age. 
 				</p>
             </div>
 
@@ -322,9 +315,9 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">October 2015 - Present</p>
-                            <h3>PHT POWER TECH (BD) CO. LTD.</h3>
-                            <h5>Secretery of Managing Director</h5>
+                            <p class="timeline__timeframe">February 2013 - February 2015</p>
+                            <h3>BUBT IT CLUB.</h3>
+                            <h5>Co Founder & President</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>PHT Power Tech BD Co. Ltd. - 深圳市鹏海通科技有限公司 is 100% Chinese owned manufacturer company 
@@ -338,9 +331,9 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">February 2017 - Continue</p>
-                            <h3>Leon Manufacturing (BD) Co. Ltd.</h3>
-                            <h5>Finance & Commercial Manager</h5>
+                            <p class="timeline__timeframe">March 2017 - March 2018</p>
+                            <h3>Rotaract Club of Dhaka Royal.</h3>
+                            <h5>Charterd President</h5>
                         </div>
                         <div class="timeline__desc">	
                             <p>LEON Manufacturing (BD) Co. Ltd. - 深圳市鹏海通科技有限公司 
@@ -361,8 +354,8 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">October 2014 - May 2015 </p>
-                            <h3>Hammer Activation Ltd.</h3>
-                            <h5>Asst. Project Incharge</h5>
+                            <h3>Santhia Student Development Organizetion - SSDA.</h3>
+                            <h5>Founder & President</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>Hammer Activation Ltd. is a market research and brand business development 
@@ -375,8 +368,8 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">July 2013 -  2012</p>
-                            <h3>Codesum</h3>
-                            <h5>Web Designer</h5>
+                            <h3>BAPS - Bangladesh Association of Programming Summit</h3>
+                            <h5>Executive Member</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>CODESUM is a software firm working to develop software, ERP, Graphics design, UI/UX development, Web design and 
@@ -394,7 +387,7 @@
 			
 
 		
-		
+		<!-------------------------------------------------------------------------------- Additional Input--------------------->
 		
 		
 		
