--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
 
             <div class="col-full text-center">
                 <h2><br>
-                    Extra Curriculler Activities.</h2>
+                    Extra Curricular  Activities.</h2>
                 <p class="lead">
 				He was actively engaged with verious academic, social charity and philanthropy based community 
-				platform as his extra curricullar activities from his student age. 
+				platform as his extra curricular activities from his student age. 
 				</p>
             </div>
 
