--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
  <br>
         
 
-        <div class="row about-content about-content--timeline">
+        <div class="s-stats" >
 
             <div class="col-full text-center">
                 <h2><br>
