--- a/index.html
+++ b/index.html
@@ -393,13 +393,6 @@
     </section> <!-- end about -->
     
 
-
-
-
-
-
-
-
     <!-- works
     ================================================== -->
     <section id="works" class="s-works target-section">
@@ -407,11 +400,9 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Portfolio</h3>
-                <h1>His Latest Work.</h1>
+                <h1>See My Latest Projects.</h1>
                 
-                <p class="lead">
-				Here you find his some completed projects for his own and others professional contract.  
-				</p>
+                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
             </div>
         </div>
 
@@ -670,7 +661,6 @@
         </div> <!-- end masonry -->
 
     </section> <!-- end works -->
-
 	
 	
 	<!-- testimonials
