--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
 		
 <!-------------------------------------------------------------------------------- Additional Input--------------------->		
 		
-
-        <div class="s-stats" >
-		
-		 <br>
+ <br>
+        <div class="row about-content about-content--timeline" >
+			
 
             <div class="col-full text-center">
                 <h2><br>
@@ -385,7 +384,6 @@
                 
             </div> <!-- end right -->
 			
-
 		
 		<!-------------------------------------------------------------------------------- Additional Input--------------------->
 		
