--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="">
+                <form name="contactForm" id="contactForm" method="post" action="submit">
                     <fieldset>
     
                     <div class="form-field">
