--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="submit">
+                <form name="contactForm" id="contactForm" method="post" action=" ">
                     <fieldset>
     
                     <div class="form-field">
@@ -926,10 +926,11 @@
                     </fieldset>
                 </form>
 
-                <!-- contact-warning -->
+                <!-- contact-warning --
                 <div class="message-warning">
                     Something went wrong. Please try again.
                 </div> 
+				>
             
                 <!-- contact-success -->
                 <div class="message-success">
