--- a/index.html
+++ b/index.html
@@ -926,11 +926,11 @@
                     </fieldset>
                 </form>
 
-                <!-- contact-warning --
+                <!-- contact-warning -->
                 <div class="message-warning">
                     Something went wrong. Please try again.
                 </div> 
-				>
+				
             
                 <!-- contact-success -->
                 <div class="message-success">
