--- a/index.html
+++ b/index.html
@@ -388,6 +388,63 @@
 		
 		
     </section> <!-- end about -->
+
+
+
+
+
+    <!-- s-stats
+    ================================================== -->
+    <section id="stats" class="s-stats">
+        <div class="row block-1-4 block-tab-1-2 block-mob-full stats">
+
+            <div class="col-block stats__col ">
+                <div class="stats__count">
+                    04
+                </div>
+                <h4>Startup</h4>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">
+                    1500
+                </div>
+                <h4>Professional Connection</h4>
+            </div>
+            <div class="col-block stats__col stats__col--highlight">
+                <div class="stats__upsign">
+                    <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
+                </div>
+                <div class="stats__count">
+                    005
+                </div>
+                <h4>Corporate Company</h4>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">
+                    035
+                </div>
+                <h4>Connected Organizetion</h4> 
+            </div>
+
+        </div>
+    </section> <!-- end s-stats -->
+
+
+    <!-- s-stats
+    ================================================== -->
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 
     <!-- works
