--- a/index.html
+++ b/index.html
@@ -905,15 +905,15 @@
 
             <div class="col-block stats__col ">
                 <div class="stats__count">
-                    04
+                    970
                 </div>
-                <h4>Startup</h4>
+                <h4>Cup of Coffee</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    1500
+                    645
                 </div>
-                <h4>Professional Connection</h4>
+                <h4>Sleepless Night</h4>
             </div>
             <div class="col-block stats__col stats__col--highlight">
                 <div class="stats__upsign">
