--- a/index.html
+++ b/index.html
@@ -920,15 +920,15 @@
                     <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
                 <div class="stats__count">
-                    005
+                    67
                 </div>
-                <h4>Corporate Company</h4>
+                <h4>Complete Tasks</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    035
+                    35
                 </div>
-                <h4>Connected Organizetion</h4> 
+                <h4>Failuars</h4> 
             </div>
 
         </div>
