--- a/index.html
+++ b/index.html
@@ -191,10 +191,14 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="#0" class="btn btn--primary full-width">Download My CV</a>
+                <a href="https://drive.google.com/file/d/1i7-GE3HiTTIq5_1P8E1nPmNfHjiPjnA7/view?usp=sharing" class="btn btn--primary full-width">
+				
+				Download My CV
+				
+				</a>
             </div>
             <div class="col-six tab-full right">
-                <a href="#0" class="btn full-width">Hire Me Now</a>
+                <a href="#contact" class="btn full-width">Hire Me Now</a>
             </div>
 
         </div> <!-- end about-content buttons -->
