--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>Introduction !</h3>
+                <h3></h3>
 
-                <p>Samiul Basar Sojol is the Founder & CEO of <a>Electeco</a> Global Corporation. This is a 
+                <p> the Founder & CEO of <a>Electeco</a> Global Corporation. This is a 
                     Business Community Platform that Connect Businessess, Initiatives & Leaders to enhance  
                     their opportunities and benifits.</p>
 
