--- a/index.html
+++ b/index.html
@@ -459,15 +459,6 @@ Department: Management
 
 
 
-
-
-
-
-
-
-
-    
-
     <!-- works
     ================================================== -->
     <section id="works" class="s-works target-section">
@@ -477,7 +468,9 @@ Department: Management
                 <h3>Portfolio</h3>
                 <h1>See My Latest Projects.</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">
+		    	Here you can check out my latest work on my previous workplace. Discover my more project to <a href="#">click here.</a>  
+		    </p>
             </div>
         </div>
 
