--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-<<<<<<< HEAD
+
                 <h3></h3>
 
                 <p> </p>
 =======
-                <h3>      </h3>
+                <h3> About Me     </h3>
 
                 <p>I'm developing my own projects with views to build a strong  
                     Business Community Platform which being Connect a lot of Businessess, Initiatives & Leaders to 
