--- a/index.html
+++ b/index.html
@@ -146,18 +146,13 @@
                 <h3></h3>
 
                 <p> </p>
-                <h3> About Me     </h3>
-
-                <p>I'm developing my own projects with views to build a strong  
-                    Business Community Platform which being Connect a lot of Businessess, Initiatives & Leaders to 
-			enhance their opportunities and benifits together.</p>
->>>>>>> 6ce88c68eecb18f770d29812735983547fe2b843
+                <h3> Career Summary    </h3>
 
                 <p>
-                  I'm also a dynamic and motivated professional with a proven record of generating and building relationships, managing business from 
-				concept to completion, designing business strategies and motitavig individuals and team to success. 
-			  Skilled in building cross-functional teams, demonstrating exceptionals, communication skills, and making critical decisions during challenges. 
-			Adaptable and transformational leader with ability to work independently, creating effective presentations, and developing opportunity.
+			An accomplished 
+			professional with 08 years of experience in International 
+			Business Development and Supply Chain Management at multinational companies. Engaged 120+ local and 10+ international entities to obtain 35% growth in revenue. Operating Supply Chain (Export-Import) Process 20% faster and reducing 8-10% operational expenses. From 2015 to present I managed the enlistment of 03 FDI Companies in Bangladesh with all kinds of regulatory affairs at RJSC, BIDA, 
+			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries.
                 </p>
             </div>
 
