--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
                 <p>
 			An accomplished 
 			professional with 08 years of experience in International 
-			Business Development and Supply Chain Management at multinational companies. Engaged 120+ local and 10+ international entities to obtain 35% growth in revenue. Operating Supply Chain (Export-Import) Process 20% faster and reducing 8-10% operational expenses. From 2015 to present I managed the enlistment of 03 FDI Companies in Bangladesh with all kinds of regulatory affairs at RJSC, BIDA, 
+			Business Development and Supply Chain Management at multinational companies. Engaged 120+ local and 10+ international 
+			entities to obtain 35% growth in revenue. Operating Supply Chain (Export-Import) Process 20% faster and reducing 8-10% operational 
+			expenses. From 2015 to present I managed the enlistment of 03 FDI Companies in Bangladesh with all kinds of regulatory affairs at RJSC, BIDA, 
 			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries.
                 </p>
             </div>
