--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
 			entities to obtain 35% growth in revenue. Operating Supply Chain (Export-Import) Process 20% faster and reducing 8-10% operational 
 			expenses. From 2015 to present I managed the enlistment of 03 FDI Companies in Bangladesh with all kinds of regulatory affairs at RJSC, BIDA, 
 			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries.
+			<br>
+			Experience and Impact : 
+International Business Development • Operation Management • Supply Chain Management • Financial Analysis • Export • Import • LC and Bonds • Trade Commercial • Compliance • Regulatory Affairs. 
+
                 </p>
             </div>
 
